--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,13 @@
         </dependency>
 
     </dependencies>
+    <distributionManagement>
+        <repository>
+            <id>deploymentRepo</id>
+            <name>Nexus Repository</name>
+            <url>http://172.17.0.2:8081/repository/maven-releases/</url>
+        </repository>
+    </distributionManagement>
 
     <build>
         <plugins>
