--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,9 @@
         </dependency>
 
     </dependencies>
-
+    <distributionManagement>
+             <url>http://172.17.0.2:8081/repository/maven-releases/</url>
+    </distributionManagement>
     <build>
         <plugins>
             <plugin>
