--- a/pom.xml
+++ b/pom.xml
@@ -51,8 +51,7 @@
     <distributionManagement>
         <repository>
             <id>deploymentRepo</id>
-            <name>Nexus Repository</name>
-            <url>http://172.17.0.2:8081/repository/maven-releases/</url>
+            <url>http://localhost:8081/repository/maven-nexus-projet/</url>
         </repository>
     </distributionManagement>
 
