--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,11 @@
                     </excludes>
                 </configuration>
             </plugin>
+		<plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-deploy-plugin</artifactId>
+     <version>3.8.3</version>
+</plugin>
         </plugins>
     </build>
 
