--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,8 @@ services:
       MYSQL_ROOT_USER: root
       MYSQL_ROOT_PASSWORD: root
     volumes:
-    - /home/mysql/data:/var/lib/mysql
+      - /home/mysql/data:/var/lib/mysql
+
   kaddem-app:
     depends_on:
       - mysqldb
@@ -18,15 +19,16 @@ services:
       - 8089:8089
     environment:
       SPRING_APPLICATION_JSON: '{
-           "spring.datasource.url=jdbc:mysql://mysqldb:3306/kaddem\db?&createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC",
-           "spring.datasource.username": "root",
-           "spring.datasource.password": root,
-           "spring.jpa.show-sql": true,
-           "spring.jpa.hibernate.ddl-auto": "update",
-           "spring.jpa.properties.hibernate.dialect": "org.hibernate.dialect.MySQL5InnoDBDialect"
+        "spring.datasource.url": "jdbc:mysql://mysqldb:3306/kaddem?createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC",
+        "spring.datasource.username": "root",
+        "spring.datasource.password": "root",
+        "spring.jpa.show-sql": true,
+        "spring.jpa.hibernate.ddl-auto": "update",
+        "spring.jpa.properties.hibernate.dialect": "org.hibernate.dialect.MySQL5InnoDBDialect"
         }'
     stdin_open: true
     tty: true
+
   # angularfrontend: # Define the Angular frontend service
   #   container_name: my-angular-app
   #   image: mouadh21/achatfront:1.0.0
