--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
     </dependencies>
     <distributionManagement>
         <repository>
-            <id>nexus-releases</id>
+            <id>deploymentRepo</id>
             <url>http://172.16.2.21:8081/repository/maven-releases/</url>
         </repository>
     </distributionManagement>
