--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
     <distributionManagement>
         <repository>
             <id>deploymentRepo</id>
-            <url>http://172.16.2.21:8081/repository/maven-releases/</url>
+            <url>http://localhost:8081/repository/maven-nexus-projet/</url>
         </repository>
     </distributionManagement>
     <build>
