--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,8 @@
 
     </dependencies>
     <distributionManagement>
-             <url>http://172.17.0.2:8081/repository/maven-releases/</url>
+    <id>deploymentRepo</id>
+             <url>http://localhost:8081/repository/maven-nexus-project/</url>
     </distributionManagement>
     <build>
         <plugins>
