--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>tn.esprit.spring</groupId>
     <artifactId>kaddem</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>kaddem</name>
     <description>kaddem</description>
     <properties>
@@ -78,7 +78,7 @@
         <repository>
             <id>deploymentRepo</id>
             <name>Nexus Repository</name>
-            <url>http://192.168.19.131:8081/repository/maven-snapshots/</url>
+            <url>http://192.168.19.131:8081/repository/kaddem-devops/</url>
         </repository>
     </distributionManagement>
 
